# taggie

./: Cargo.toml  README.md
examples/: shuffle_current_dir.rs
src/: audio_file.rs  editor.rs  lib.rs  main.rs  tag.rs
