[package]
name = "taggie"
version = "0.1.0"
authors = ["Rafał Cieślak <ravicious@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Edit audio tags in your favorite text editor"
homepage = "https://github.com/ravicious/taggie"
repository = "https://github.com/ravicious/taggie"
readme = "README.md"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["audio-tags", "mp3-tags", "m4a-tags", "tag-editing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.0.4"
taglib = "*"

[dev-dependencies]
fastrand = "1.4.0"
